err.log
In file included from ./src/display.c:14:0:
./include/base.h:138:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/display.c:14:0:
./include/base.h:139:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/display.c: In function 'send_control':
./src/display.c:53:2: warning: implicit declaration of function 'set_request_head' [-Wimplicit-function-declaration]
  set_request_head(control_display->req, cmd, data_len);
  ^~~~~~~~~~~~~~~~
./src/display.c:54:36: warning: pointer targets in assignment differ in signedness [-Wpointer-sign]
     control_display->req->data_buf = buf;
                                    ^
./src/display.c: At top level:
./src/display.c:111:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'static'
 static void simulate_keyboard(rfb_keyevent *key)
 ^~~~~~
./src/display.c: In function 'start_display':
./src/display.c:507:2: warning: implicit declaration of function 'process_server_msg' [-Wimplicit-function-declaration]
  process_server_msg(cli->req);
  ^~~~~~~~~~~~~~~~~~
./src/display.c: In function 'stop_display':
./src/display.c:522:2: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
  usleep(200000);   //等待200ms 客户端结束
  ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/display.c:524:2: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
  usleep(200000);   //等待200ms 客户端断开
  ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/display.c: In function 'stop_control':
./src/display.c:570:2: warning: 'usleep' is deprecated [-Wdeprecated-declarations]
  usleep(200000);
  ^~~~~~
In file included from ./include/base.h:7:0,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\unistd.h:100:29: note: declared here
 int __cdecl __MINGW_NOTHROW usleep( useconds_t )__MINGW_ATTRIB_DEPRECATED;
                             ^~~~~~
./src/display.c: In function 'close_display':
./src/display.c:601:5: warning: implicit declaration of function 'close_fd' [-Wimplicit-function-declaration]
     close_fd(displays[i].req->fd);
     ^~~~~~~~
./src/display.c: In function 'control_msg':
./src/display.c:615:4: warning: implicit declaration of function 'simulate_keyboard' [-Wimplicit-function-declaration]
    simulate_keyboard((rfb_keyevent *)&(req->data_buf[0]));
    ^~~~~~~~~~~~~~~~~
./src/display.c: In function 'event_loop':
./src/display.c:717:4: warning: implicit declaration of function 'stop_server' [-Wimplicit-function-declaration]
    stop_server();  //通过callback 返回给dll
    ^~~~~~~~~~~
make: *** [display.o] Error 1
